<resources>
    <string name="app_name">weather_mobile-app</string>
    <string name="city">Minsk</string>
    <string name="temperature">+22.2 C</string>
    <string name="icon_description">Weather icon</string>
    <string name="wind_param">Ветер</string>
    <string name="wind_value">штиль</string>
    <string name="humidity_param">Влажность</string>
    <string name="humidity_value">95%</string>
    <string name="pressure_param">Давление</string>
    <string name="pressure_value">1018гПа</string>
    <string name="sunrise_param">Восход солнца</string>
    <string name="sunrise_value">06:26</string>
    <string name="sunset_param">Заход солнца</string>
    <string name="sunset_value">19:51</string>
    <string name="error_text">Ошибка обновления данных</string>
    <string name="update">Обновить</string>
    <string name="ok">OK</string>
</resources>
