<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:textSize="18pt"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046" />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/temperature"
        android:textColor="@color/colorWhite"
        android:textSize="20pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/weatherIcon"
        android:layout_width="163dp"
        android:layout_height="146dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/icon_description"
        app:layout_constraintEnd_toStartOf="@+id/temperature"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city"
        android:src="@drawable/sun_cloud" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TableRow
            android:layout_margin="8dp" >

            <TextView
                android:gravity="center_horizontal"
                android:text="@string/wind_param"
                android:textColor="#fff"
                android:textStyle="bold"
                android:layout_marginRight="150dp"/>

            <TextView
                android:gravity="center_horizontal"
                android:text="@string/wind_value"
                android:textColor="#fff"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_margin="8dp" >

            <TextView
                android:gravity="center_horizontal"
                android:text="@string/humidity_param"
                android:textColor="#fff"
                android:textStyle="bold"
                android:layout_marginRight="150dp" />

            <TextView
                android:gravity="center_horizontal"
                android:text="@string/humidity_value"
                android:textColor="#fff"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_margin="8dp" >

            <TextView
                android:gravity="center_horizontal"
                android:text="@string/pressure_param"
                android:textColor="#fff"
                android:textStyle="bold"
                android:layout_marginRight="150dp" />

            <TextView
                android:gravity="center_horizontal"
                android:text="@string/pressure_value"
                android:textColor="#fff"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_margin="8dp" >

            <TextView
                android:gravity="center_horizontal"
                android:text="@string/sunrise_param"
                android:textColor="#fff"
                android:textStyle="bold"
                android:layout_marginRight="150dp" />

            <TextView
                android:gravity="center_horizontal"
                android:text="@string/sunrise_value"
                android:textColor="#fff"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_margin="8dp" >

            <TextView
                android:gravity="center_horizontal"
                android:text="@string/sunset_param"
                android:textColor="#fff"
                android:textStyle="bold"
                android:layout_marginRight="150dp" />

            <TextView
                android:gravity="center_horizontal"
                android:text="@string/sunset_value"
                android:textColor="#fff"
                android:textStyle="bold" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/update_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="44dp"
        android:text="@string/update"
        android:background="@color/updateBtnColor"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toEndOf="@+id/city"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>